[package]
name = "pinecone-wasm"
version = "0.1.0"
authors=["Abimalek Mekuriya"]
documentation = "https://docs.rs./pinecone-wasm"
repository = "https://github.com/abimek/pinecone-wasm"
homepage = "https://github.com/abimek/pinecone-wasm"
description = "Pinecone Client for Rust WASM"
license = "Apache-2.0 OR MIT"
edition = "2021"

keywords = ["pinecone"]
categories = ["api-bindings", "wsm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["http"]
http = []
# grcp = [] // This is a soon to come feature once I enable grcp communciatio

[dependencies]
reqwest = {version = "0.11", features=["json"]}
wasm-bindgen-test = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version="1.0", features = ["preserve_order"]}
thiserror = "1.0"
